[package]
name = "tonic-experiments-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow             = "1"
chrono             = "0"
configured         = "0"
prost              = "0"
serde              = { version = "1", features = [ "derive" ] }
serde_json         = "1"
# time               = { version = "0", features = ["local-offset"] }
tokio              = { version = "1", features = [ "full" ] }
tonic              = "0"
tracing            = "0"
tracing-subscriber = { version = "0", features = [ "env-filter", "json" ] }

[build-dependencies]
anyhow      = "1"
tonic-build = "0"
walkdir     = "2"
